<resources>
    <string name="app_name">WeatherApp</string>
    <string name="now">NOW</string>
    <string name="forecast">FORECAST</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind speed</string>
    <string name="clouds">Clouds</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="clear_sky">Clear sky</string>
    <string name="few_clouds">Few clouds</string>
    <string name="scattered_clouds">Scattered clouds</string>
    <string name="broken_clouds">Broken clouds</string>
    <string name="shower_rain">Shower rain</string>
    <string name="rain">Rain</string>
    <string name="light_rain">Light rain</string>
    <string name="thunderstorm">Thunderstorm</string>
    <string name="snow">Snow</string>
    <string name="mist">Mist</string>
    <string name="overcast_clouds">Overcast clouds</string>
    <string name="undefined">Undefined</string>
</resources>
